<resources>
    <string name="app_name">TripApplication</string>
    <string name="ZL">Welcome to ZL Travel Agency!</string>
    <string name="click1"><![CDATA[Click to enter -->]]></string>
    <string name="click2">About US</string>
    <string name="title_activity_scrolling_aboutus">ScrollingActivity_aboutus</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="About_us" />
    <string name="content">ZL Travel Agency is a new company which committing to providing customers with a better travel experice.
        Our object is providing careful travel planning, customers can choose suitable and favorite tourist attractions according to our introduction of various famous tourist attractions.
        We will introduce the unique features of each scenic spot according to the actual situation, as well as the surrounding environment, including accommodation, food and so on.
        We will also attach pictures of each scenic spot for you to choose from. We hope you can choose our service, we will let you have a perfect trip.
    </string>
    <string name="rdo_home_lable">首页</string>
    <string name="rdo_service_lable">服务</string>
    <string name="rdo_help_lable">帮助</string>
    <string name="lable_home">Country and region</string>
    <string name="lable_China">1.China</string>
    <string name="lable_South_Kroea">2.South Kroea</string>
    <string name="lable_USA">The United State</string>
    <string name="lable_France">4.France</string>
    <string name="lable_USA2">3.The United States</string>
    <string name="lable_UK">5.The United Kindom</string>
    <string name="lable_Japan">6.Japan</string>
    <string name="lable_India">7.India</string>
    <string name="lable_Australia">8.Australia</string>
    <string-array name="China">
        <item>Beijing</item>
        <item>Shanghai</item>
        <item>Guangzhou</item>
        <item>Chengdu</item>
        <item>Hong Kong</item>
        <item>Taiwan</item>
    </string-array>
    <string-array name="South_Korea">
        <item>Seoul</item>
        <item>Busan</item>
        <item>Inchon</item>
        <item>Daegu</item>
    </string-array>
    <string-array name="USA">
        <item>New York</item>
        <item>Los Angeles</item>
        <item>Chicago</item>
        <item>Houston</item>
    </string-array>
    <string-array name="France">
        <item>Paris</item>
        <item>Marseille</item>
        <item>Lyon</item>
        <item>Nice</item>
    </string-array>
    <string-array name="UK">
        <item>London</item>
        <item>Edinburgh</item>
        <item>Cardiff</item>
        <item>Liverpool</item>
        <item>Oxford</item>
        <item>Cambridge</item>
        <item>Manchester</item>
    </string-array>
    <string-array name="Japan">
        <item>Tokyo</item>
        <item>Yokohama</item>
        <item>Osaka</item>
        <item>Nagoya</item>
        <item>Kobe</item>
    </string-array>
    <string-array name="India">
        <item>Bombay</item>
        <item>Delhi</item>
        <item>Bangalore</item>
        <item>Kolkata</item>
    </string-array>
    <string-array name="Australia">
        <item>Sydney</item>
        <item>Canberra</item>
        <item>Perth</item>
        <item>Darwin</item>
        <item>Melbourne</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Beijing1">Beijing, hereinafter referred to as \"jing\", is a provincial-level administrative region of the People\'s Republic of China, the capital, and municipalities directly under the central government, national center city, very large cities, the national political center, cultural center and international communication center, science and technology innovation center, is the world famous ancient capital and modern international city, is the central committee of the communist party of China, the central people\'s government of the People\'s Republic of China and the National People\'s Congress standing committee\'s office is located.Beijing is located in north China, with its center at 116°20 \'east longitude and 39°56\' north latitude. It adjoins tianjin in the east and hebei in the rest. The total area of Beijing is 16,410.54 square kilometers.Beijing terrain northwest high, southeast low. Mountains surround the west, north and northeast, and the southeast is a plain that slopes gently toward the bohai sea. The main rivers flowing through the territory are yongding river, chaobai river, north canal, and tuma river, etc. Most of them originate from the mountains in the northwest, run through the mountains, wind through the plain areas in the southeast, and finally merge into the bohai sea respectively. Beijing has a typical warm temperate semi-humid continental monsoon climate, with high temperature and rainy summer, cold and dry winter and short spring and autumn.</string>
    <string name="lable_click">please select the city you want:</string>
    <string name="lable1">Beijing</string>
    <string name="lable2">Shanghai</string>
    <string name="lable3">Chengdu</string>
    <string name="lable4">Hong Kong</string>
    <string name="lable5">Taiwan</string>
    <string name="lable21">Seoul</string>
    <string name="lable22">Busan</string>
    <string name="lable23">inchon</string>
    <string name="lable24">daegu</string>
    <string name="lable41">paris</string>
    <string name="lable42">marseille</string>
    <string name="lable43">lyon</string>
    <string name="lable44">nice</string>
    <string name="lable51">london</string>
    <string name="lable52">edinburgh</string>
    <string name="lable53">cardiff</string>
</resources>