<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".FranceActivity">

    <TextView
        android:textSize="30sp"
        android:id="@+id/Enter_France"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_click" />

    <Button
        android:id="@+id/Paris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openParis"
        android:text="@string/lable41"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Marseille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openMarseille"
        android:text="@string/lable42"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Lyon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openLyon"
        android:text="@string/lable43"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Nice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openLyon"
        android:text="@string/lable44"
        android:textSize="25sp" />

</LinearLayout>